Formatting and clean up :wrench:

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
-div {position:relative;
-border-width: 1px;
-border-style: solid;
-border-color: red}
-.emptystlye {}
+div {
+  position: relative;
+  border-width: 1px;
+  border-style: solid;
+  border-color: red;
+}
