--- a/src/templates/fragments/meta.html
+++ b/src/templates/fragments/meta.html
@@ -1,7 +1,10 @@
 <!--begin [meta.html]-->
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/global.css" media="all" />
-	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-<!--end [meta.html]-->	
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" type="text/css" href="css/global.css" media="all" />
+<script
+  type="text/javascript"
+  src="http://code.jquery.com/jquery-2.1.3.min.js"
+></script>
+<!--end [meta.html]-->
